[package]
name = "resource-mesh-portal-api-client"
version = "0.0.1"
edition = "2021"
license = "MIT"
homepage ="http://starlane.io/"
readme="README.md"
repository = "https://github.com/mechtronium/resource-mesh-portal"
description = "A client library for the Resource Mesh Portal API."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
resource-mesh-portal-serde = { path = "../resource-mesh-portal-serde", version= "0.0.1"}
tokio = { version = "1.4.0", features = ["full"] }
uuid = { version = "0.8.2", features = ["serde", "v4", "wasm-bindgen"] }
async-trait = "0.1.48"
dashmap = "4.0.2"
anyhow = "1.0.44"
thiserror = "1.0.30"
